syntax = "proto3";

package greeter;

import "google/api/annotations.proto";
import "google/api/httpbody.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

option go_package = "gen/go/greeterpb;greeterpb";

service GreeterService {
  rpc SayHello(HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      post: "/api/v1/hello"
      body: "*"
    };
  }

  rpc PrintRandomImagePNGPathParse(PrintRandomImagePNGRequest) returns (google.api.HttpBody) {
    option (google.api.http) = {
      get: "/api/v1/print_random/{x}/{y}/image.png"
    };
  }

  rpc PrintRandomImagePNGQueryParse(PrintRandomImagePNGRequest) returns (google.api.HttpBody) {
    option (google.api.http) = {
      get: "/api/v1/random_image.png"
    };
  }

  rpc TestTypesRead(TestTypesReadRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get: "/api/v1/test/types/{str}/{i64}"
    };
  }

  rpc TestTypesReadPostPathAllowed(TestTypesReadRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/v1/test/types/{str}/:i64"
    };
  }

  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/api/v1/user"
      body: "*"
    };
  }
}

message HelloRequest {
  string name = 1 [(validate.rules).string.min_len = 3];
  string email = 2 [(validate.rules).string.email = true];
}

message HelloResponse {
  string message = 1;
}

message PrintRandomImagePNGRequest {
  int32 x = 1;
  int32 y = 2;
}

message TestTypesReadRequest {
  string str = 1 [(validate.rules).string.min_len = 3];
  int64  i64 = 2;
  optional int32  i32 = 3;
  repeated uint32 u32 = 4;
  uint64 u64 = 5;
  bool   b = 6;
  float  f = 7;
  double d = 8;
  bytes  bts = 9;
  repeated string str_rep = 10;
}

message CreateUserRequest {
  string username = 1 [(validate.rules).string.min_len = 3];
  string email = 2 [(validate.rules).string.email = true];
}

message CreateUserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
}